--- a/src/zytj/template/candlestick.html
+++ b/src/zytj/template/candlestick.html
@@ -5,10 +5,10 @@
     
     <title>jqPlot Sample Charts</title>
 
-    <link class="include" rel="stylesheet" type="text/css" href="../jquery.jqplot.min.css" />
-    <link rel="stylesheet" type="text/css" href="examples.min.css" />
-    <link type="text/css" rel="stylesheet" href="syntaxhighlighter/styles/shCoreDefault.min.css" />
-    <link type="text/css" rel="stylesheet" href="syntaxhighlighter/styles/shThemejqPlot.min.css" />
+    <link class="include" rel="stylesheet" type="text/css" href="{{ STATIC_URL }}js/jquery.jqplot.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}js/examples.min.css" />
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}js/syntaxhighlighter/styles/shCoreDefault.min.css" />
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}js/syntaxhighlighter/styles/shThemejqPlot.min.css" />
   
   <!--[if lt IE 9]><script language="javascript" type="text/javascript" src="../excanvas.js"></script><![endif]-->
   <script class="include" type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
@@ -76,8 +76,8 @@ $(document).ready(function(){
 	        // treat dates without time as local time.
 	        // Generally, if  a time is specified without a time zone,
 	        // the browser assumes the time zone of the client.
-	        //min: "03-19-2012",
-	        //max: "05-17-2012 16:00",
+	        min: "07-19-2012",
+	        max: "09-17-2012 16:00",
 	        //tickInterval: "6 weeks",
 	      },
 	      y2axis: {
@@ -111,7 +111,7 @@ $(document).ready(function(){
 
 </head>
 <body>    
-    <div class="logo">
+    
    <div class="nav">
    <a class="nav" href="../../../index.php"><span>&gt;</span>Home</a>
    <a class="nav"  href="../../../docs/"><span>&gt;</span>Docs</a>
@@ -132,59 +132,6 @@ $(document).ready(function(){
     }
 
 </style>
-
-<div class="example-links">
-
-<p class="example-link"><a class="example-link" href="area.html">Filled (Area) Charts</a></p>
-<p class="example-link"><a class="example-link" href="axisLabelTests.html">Line Charts and Options</a></p>
-<p class="example-link"><a class="example-link" href="axisLabelsRotatedText.html">Axis Labels and Rotated Text</a></p>
-<p class="example-link"><a class="example-link" href="axisScalingForceTickAt.html">Force Plot to Have Tick at 0 or 100</a></p>
-<p class="example-link"><a class="example-link" href="bandedLine.html">Error Bands and Confidence Intervals</a></p>
-<p class="example-link"><a class="example-link" href="bar-charts.html">Vertical and Horizontal Bar Charts</a></p>
-<p class="example-link"><a class="example-link" href="barLineAnimated.html">Animated Charts</a></p>
-<p class="example-link"><a class="example-link" href="barTest.html">Bar Charts</a></p>
-<p class="example-link"><a class="example-link" href="bezierCurve.html">Bezier Curve Plots</a></p>
-<p class="example-link"><a class="example-link" href="blockPlot.html">Block Plots</a></p>
-<p class="example-link"><a class="example-link" href="bubble-plots.html">Bubble Plots</a></p>
-<p class="example-link"><a class="example-link" href="bubbleChart.html">Bubble Charts</a></p>
-<p class="example-link"><a class="example-link" href="candlestick-charts.html">Open Hi Low Close and Candlestick Charts</a></p>
-<p class="example-link"><a class="example-link" href="candlestick.html">Candlestick and Open Hi Low Close charts</a></p>
-<p class="example-link"><a class="example-link" href="cursor-highlighter.html">Data Point Highlighting, Tooltips and Cursor Tracking</a></p>
-<p class="example-link"><a class="example-link" href="customHighlighterCursorTrendline.html">Highlighting, Dragging Points, Cursor and Trend Lines.</a></p>
-<p class="example-link"><a class="example-link" href="dashboardWidget.html">Animated Dashboard Sample - Filled Line with Log Axis</a></p>
-<p class="example-link"><a class="example-link" href="dashedLines.html">Dashed Lines with Smoothing</a></p>
-<p class="example-link"><a class="example-link" href="data-renderers.html">AJAX and JSON Data Loading via Data Renderers</a></p>
-<p class="example-link"><a class="example-link" href="date-axes.html">Date Axes</a></p>
-<p class="example-link"><a class="example-link" href="dateAxisLogAxisZooming.html">Zooming with Date and Log Axes</a></p>
-<p class="example-link"><a class="example-link" href="dateAxisRenderer.html">Date Axes</a></p>
-<p class="example-link"><a class="example-link" href="fillBetweenLines.html">Charts with Fill Between Lines</a></p>
-<p class="example-link"><a class="example-link" href="hiddenPlotsInTabs.html">Hidden Plots</a></p>
-<p class="example-link"><a class="example-link" href="kcp_area.html">Area Chart</a></p>
-<p class="example-link"><a class="example-link" href="kcp_cdf.html">Cumulative Density Function Chart</a></p>
-<p class="example-link"><a class="example-link" href="kcp_engel.html">Engel Curves</a></p>
-<p class="example-link"><a class="example-link" href="kcp_lorenz.html">Lorenz Curves</a></p>
-<p class="example-link"><a class="example-link" href="kcp_pdf.html">Probability Density Function Chart</a></p>
-<p class="example-link"><a class="example-link" href="kcp_pyramid.html">Pyramid Charts</a></p>
-<p class="example-link"><a class="example-link" href="kcp_pyramid2.html">Pyramid Charts 2</a></p>
-<p class="example-link"><a class="example-link" href="line-charts.html">Line Charts and Options</a></p>
-<p class="example-link"><a class="example-link" href="mekkoCharts.html">jqPlot Charts and Graphs</a></p>
-<p class="example-link"><a class="example-link" href="meterGauge.html">jqPlot Meter Gauge</a></p>
-<p class="example-link"><a class="example-link" href="pie-donut-charts.html">Pie and Donut Charts</a></p>
-<p class="example-link"><a class="example-link" href="pieTest.html">Pie Charts and Options</a></p>
-<p class="example-link"><a class="example-link" href="pieTest4.html">Pie Charts and Options 2</a></p>
-<p class="example-link"><a class="example-link" href="point-labels.html">Data Point labels</a></p>
-<p class="example-link"><a class="example-link" href="resizablePlot.html">Resizable Plots</a></p>
-<p class="example-link"><a class="example-link" href="rotated-tick-labels.html">Rotated Labels and Font Styling</a></p>
-<p class="example-link"><a class="example-link" href="rotatedTickLabelsZoom.html">Date Axes, Rotated Labels and Zooming</a></p>
-<p class="example-link"><a class="example-link" href="smoothedLine.html">Smoothed Lines</a></p>
-<p class="example-link"><a class="example-link" href="theming.html">Chart Theming</a></p>
-<p class="example-link"><a class="example-link" href="waterfall.html">Waterfall Charts</a></p>
-<p class="example-link"><a class="example-link" href="waterfall2.html">Waterfall charts 2</a></p>
-<p class="example-link"><a class="example-link" href="zoom1.html">Zooming</a></p>
-<p class="example-link"><a class="example-link" href="zoomOptions.html">Zoom Options</a></p>
-<p class="example-link"><a class="example-link" href="zooming.html">Plot Zooming and Cursor Control</a></p>
-
-</div>
 
 <!-- End Index content -->
 
