implement API for view stock candlestick

--- a/src/zytj/template/candlestick.html
+++ b/src/zytj/template/candlestick.html
@@ -47,7 +47,7 @@ $(document).ready(function(){
 	      }
 	    });
 	    //alert(ret)
-	    minDate = ret[ret.length-1]
+	    //minDate = ret[ret.length-1]
 	    //alert(ret.length)
 	    
 	    return [ret];
