--- a/src/zytj/template/candlestick.html
+++ b/src/zytj/template/candlestick.html
@@ -49,8 +49,8 @@ $(document).ready(function(){
 	    //alert(ret)
 	    //minDate = ret[ret.length-1]
 	    //alert(ret.length)
-	    
-	    return [ret];
+	    //return ret;
+	    return [ret,ret];
 	  };
 	 
 	  // The url for our json data
@@ -59,7 +59,15 @@ $(document).ready(function(){
 	  //alert(jsonurl)
 	  //alert(ohlc)
 	  //alert([ohlc])
-	  
+	var line = [['06/08/2009', 7], ['06/09/2009', 100],['06/10/2009', 50]];
+    
+    var line3 = [
+     ["06/08/2009", 136.01, 139.5, 134.53, 139.48],
+     ["06/09/2009", 143.82, 144.56, 136.04, 136.97],
+     ["06/10/2009", 143.82, 144.56, 136.04, 136.97]
+     ]
+    
+    //var plot1 = $.jqplot('chart1',[line3,line],{
   var plot1 = $.jqplot('chart1',jsonurl,{
 	    // use the y2 axis on the right of the plot 
 	    //rather than the y axis on the left.
@@ -76,8 +84,8 @@ $(document).ready(function(){
 	        // treat dates without time as local time.
 	        // Generally, if  a time is specified without a time zone,
 	        // the browser assumes the time zone of the client.
-	        min: "07-19-2012",
-	        max: "09-17-2012 16:00",
+	        //min: "07-19-2012",
+	        //max: "09-17-2012 16:00",
 	        //tickInterval: "6 weeks",
 	      },
 	      y2axis: {
