add MA10/20/50 on candlestick graph,fix #3

--- a/src/zytj/template/candlestick.html
+++ b/src/zytj/template/candlestick.html
@@ -50,7 +50,8 @@ $(document).ready(function(){
 	    //minDate = ret[ret.length-1]
 	    //alert(ret.length)
 	    //return ret;
-	    return [ret,ret];
+	    //return [ret,ret];
+	    return ret;
 	  };
 	 
 	  // The url for our json data
