--- a/src/zytj/template/test.html
+++ b/src/zytj/template/test.html
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="container">
 
       <h1>Bootstrap starter template</h1>
       <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
@@ -64,7 +64,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../static/js/jquery.min.js"></script>
     <script src="../static/bootstrap/js/bootstrap.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>    
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+  
 
   </body>
 </html>
