--- a/src/zytj/template/stock_list.html
+++ b/src/zytj/template/stock_list.html
@@ -5,37 +5,37 @@
 		
 		<link rel="stylesheet" href="../static/css/style.css">
 		
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
+		<script type="text/javascript" src="../static/js/jquery.min.js">
 		</script>
 		
 		<script type="text/javascript" src="../static/js/isotope.js"></script>
+		<script type="text/javascript" src="../static/js/jquery.infinitescroll.js"></script>
 		
 		<script type="text/javascript">
 		
 		$(document).ready(function(){
 		var $container = $('#content');
-$container.isotope({
-	filter: '*',
-	animationOptions: {
-     duration: 750,
-     easing: 'linear',
-     queue: false,
-   }
-});
+		$container.isotope({
+			filter: '*',
+			animationOptions: {
+		     duration: 750,
+		     easing: 'linear',
+		     queue: false,
+		   }
+		});
 
-$('#nav a').click(function(){
-  var selector = $(this).attr('data-filter');
-    $container.isotope({ 
-	filter: selector,
-	animationOptions: {
-     duration: 750,
-     easing: 'linear',
-     queue: false,
-	 
-   }
-  });
-  return false;
-});
+
+		$container.infinitescroll({
+		    navSelector  : '#page_nav',    // selector for the paged navigation 
+		    nextSelector : '#page_nav a',  // selector for the NEXT link (to page 2)
+		    itemSelector : '.cat1',     // selector for all items you'll retrieve
+		    debug: true,
+		    },
+	    // call Isotope as a callback
+	    function( newElements ) {
+	      $container.isotope( 'appended', $( newElements ) ); 
+	    }
+	  );
 
 });
 		</script>
@@ -43,82 +43,22 @@ $('#nav a').click(function(){
 	
 	<body>
 		<div id="header"></div>
+		<div id="page_nav">
+			<a href="isotope_demo.html"></a>
+		</div>
 		<div id="nav">
 			<ul>
-				<li><a href="" data-filter="*">All</a></li>
-				<li><a href="" data-filter=".cat1">Category 1</a></li>
-				<li><a href="" data-filter=".cat2">Category 2</a></li>
-				<li><a href="" data-filter=".cat3">Category 3</a></li>
+				<li><a href="/zytj/alist" data-filter=".cat1">Sort Ascending</a></li>
+				<li><a href="/zytj/dlist" data-filter=".cat2">Sort Descending</a></li>
 			</ul>
 		</div>
 		
-		<div id="content">
-			<div class="box cat1 cat3">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Urna vut, eros aliquet sagittis augue? Augue adipiscing duis? Et a placerat, magna enim? Lacus sit. Nunc montes tristique purus auctor. Nascetur? Vut amet, phasellus pulvinar et odio. Ut aliquet integer sed enim ac amet nunc? Tincidunt sit, cum ridiculus, placerat cum, vut magna ridiculus ut phasellus ridiculus? Eu hac, mattis adipiscing, montes adipiscing urna montes rhoncus!
-				</div>
-			</div>
-			
-			<div class="box cat1">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Urna vut, eros aliquet sagittis augue? Augue adipiscing duis? Et a placerat, magna enim? Lacus sit. Nunc montes tristique purus auctor. Nascetur? Vut amet, phasellus pulvinar et odio. Ut aliquet integer sed enim ac amet nunc? Tincidunt sit, cum ridiculus, placerat cum, vut magna ridiculus ut phasellus ridiculus? Eu hac, mattis adipiscing, montes adipiscing urna montes rhoncus! Odio placerat pellentesque risus urna elit, odio phasellus, rhoncus, est ridiculus purus etiam, penatibus integer! 
-				</div>
-			</div>
-			
-			<div class="box cat2 cat3">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Urna vut, eros aliquet sagittis augue? Augue adipiscing duis? Et a placerat, magna enim? Lacus sit. Nunc montes tristique purus auctor. Nascetur?
-				</div>
-			</div>
-			
-			<div class="box cat1">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Amet dolor? Diam cras ac quis a ut, augue massa cursus natoque cursus in sociis rhoncus, scelerisque mus ac. Pellentesque odio rhoncus, aliquet tempor? Nisi cursus lorem tincidunt penatibus eu scelerisque! Scelerisque mid rhoncus turpis eros? Nunc rhoncus in turpis, mus, nec augue, odio, mid tempor aliquam, ultricies.
-				</div>
-			</div>
-			<div class="box cat2">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Diam cras ac quis a ut, augue massa cursus natoque cursus in sociis rhoncus, scelerisque mus ac. Pellentesque odio rhoncus, aliquet tempor? Nisi cursus lorem tincidunt penatibus eu scelerisque! Scelerisque mid rhoncus turpis eros? Nunc rhoncus in turpis, mus, nec augue, odio, mid tempor aliquam, ultricies.
-				</div>
-			</div>
-			<div class="box cat2">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Urna vut, eros aliquet sagittis augue? Augue adipiscing duis? Et a placerat, magna enim? Lacus sit. Nunc montes tristique purus auctor. Nascetur? Vut amet, phasellus pulvinar et odio. Pellentesque odio rhoncus, aliquet tempor? Nisi cursus lorem tincidunt penatibus eu scelerisque! Scelerisque mid rhoncus turpis eros? Nunc rhoncus in turpis, mus, nec augue, odio, mid tempor aliquam, ultricies.
-				</div>
-			</div>
-			
-			<div class="box cat2 cat3">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Urna vut, eros aliquet sagittis augue? Augue adipiscing duis? Et a placerat, magna enim? Lacus sit.
-				</div>
-			</div>
-			
-			<div class="box cat1">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Amet dolor? Diam cras ac quis a ut, augue massa cursus natoque cursus in sociis rhoncus, scelerisque mus ac. Pellentesque odio rhoncus, aliquet tempor? Nisi cursus lorem tincidunt penatibus eu scelerisque! Scelerisque mid rhoncus turpis eros? Nunc rhoncus in turpis, mus, nec augue, odio, mid tempor aliquam, ultricies.
-				</div>
-			</div>
-			
-			<div class="box cat2 cat3">
-				<h2 class="box-title">Lorem Ipsum</h2>
-				<div class="box-text">
-					Urna vut, eros aliquet sagittis augue? Augue adipiscing duis? Et a placerat, magna enim? Lacus sit. Nunc montes tristique purus auctor. Amet dolor? Diam cras ac quis a ut, augue massa cursus natoque cursus in sociis rhoncus, scelerisque mus ac. Pellentesque odio rhoncus, aliquet tempor? Nisi cursus lorem tincidunt penatibus eu scelerisque! Scelerisque mid rhoncus turpis eros? Nunc rhoncus in turpis, mus, nec augue, odio, mid tempor aliquam, ultricies.
-				</div>
-			</div>
-			{{ loop_times }}
-			{% for i in loop_times%}
+		<div id="content">			
+			{% for stock in results%}
 			    <div class="box cat2 cat3">
-					<h2 class="box-title">Lorem Ipsum</h2>
+					<h2 class="box-title">{{stock.code}}</h2>
 					<div class="box-text">
-						Hello Simon Grid
+						{{stock.PercentChangeFromYearLow}}
 				</div>
 			</div>
 			{%endfor%}
