#39: support topN list on drop/rise percentage from Year high/low

--- a/src/zytj/template/alist.html
+++ b/src/zytj/template/alist.html
@@ -58,7 +58,7 @@
 			    <div class="box cat2 cat3">
 					<h2 class="box-title">{{stock.code}}</h2>
 					<div class="box-text">
-						{{stock.PercentChangeFromYearLow}}
+						+{{stock.PercentChangeFromYearLow}}%
 				</div>
 			</div>
 			{%endfor%}
