--- a/src/zytj/template/dlist.html
+++ b/src/zytj/template/dlist.html
@@ -5,15 +5,16 @@
 		
 		<link rel="stylesheet" href="../static/css/style.css">
 		
-		<script type="text/javascript" src="../static/js/jquery.min.js">
-		</script>
-		
+		<script type="text/javascript" src="../static/js/jquery-1.8.2.min.js"></script>	
+		<script type="text/javascript" src="../static/bootstrap/js/bootstrap-tooltip.js"></script>			
 		<script type="text/javascript" src="../static/js/isotope.js"></script>
 		<script type="text/javascript" src="../static/js/jquery.infinitescroll.js"></script>
 		
 		<script type="text/javascript">
 		
 		$(document).ready(function(){
+		$('[rel=tooltip]').tooltip({html:true});
+		
 		var $container = $('#content');
 		$container.isotope({
 			filter: '*',
@@ -56,7 +57,7 @@
 		<div id="content">			
 			{% for stock in results%}
 			    <div class="box cat2 cat3">
-					<h2 class="box-title"><a href="/zytj/candle/{{stock.code}}" data-filter=".cat1">{{stock.code}}</a></h2>
+					<h2 class="box-title"><a href="/zytj/candle/{{stock.code}}" data-filter=".cat1" rel="tooltip" data-placement="right" title ="<html>Now:{{stock.current}}<br>High:{{stock.yearHigh}}<br>Low:{{stock.yearLow}}<br>MA50:{{stock.ma50}}<br>MA200:{{stock.ma200}}<br></html>">{{stock.code}}</a></h2>
 					<div class="box-text">
 						-{{stock.PercentChangeFromYearHigh}}%
 				</div>
