--- a/src/zytj/template/dlist.html
+++ b/src/zytj/template/dlist.html
@@ -4,7 +4,7 @@
 		<title>Isotope Tutorial</title>
 		
 		<link rel="stylesheet" href="../static/css/style.css">
-		
+		<link rel="stylesheet" href="../static/css/bootstrap.css">
 		<script type="text/javascript" src="../static/js/jquery-1.8.2.min.js"></script>	
 		<script type="text/javascript" src="../static/bootstrap/js/bootstrap-tooltip.js"></script>			
 		<script type="text/javascript" src="../static/js/isotope.js"></script>
@@ -14,6 +14,8 @@
 		
 		$(document).ready(function(){
 		$('[rel=tooltip]').tooltip({html:true});
+		$('.icon-arrow-down').tooltip({title:"Below MA50"});
+		$('.icon-exclamation-sign').tooltip({title:"Below MA200",placement:"right"});
 		
 		var $container = $('#content');
 		$container.isotope({
@@ -60,8 +62,16 @@
 					<h2 class="box-title"><a href="/zytj/candle/{{stock.code}}" data-filter=".cat1" rel="tooltip" data-placement="right" title ="<html>Now:{{stock.current}}<br>High:{{stock.yearHigh}}<br>Low:{{stock.yearLow}}<br>MA50:{{stock.ma50}}<br>MA200:{{stock.ma200}}<br></html>">{{stock.code}}</a></h2>
 					<div class="box-text">
 						-{{stock.PercentChangeFromYearHigh}}%
+					</div>
+					<div class="box-text">
+						{% if stock.current < stock.ma50 %}
+						<i class="icon-arrow-down"></i>
+						{%endif%}
+						{% if stock.current < stock.ma200 %}
+						<i class="icon-exclamation-sign"></i>
+						{%endif%}
+					</div>
 				</div>
-			</div>
 			{%endfor%}
 		
 		</div>
