#42: add industry to request parameter

--- a/src/zytj/template/alist.html
+++ b/src/zytj/template/alist.html
@@ -59,7 +59,7 @@
 	<body>
 		<div id="header"></div>
 
-		<a id="next" href="alist/?q=2" >next page?</a>
+		<a id="next" href="alist/?industry={{industry}}&q=2" >next page?</a>
 		<div id="nav">
 			<ul>
 				<li><a href="/zytj/alist" data-filter=".cat1">Ascending from Year Low</a></li>
