--- a/src/zytj/template/dlist.html
+++ b/src/zytj/template/dlist.html
@@ -48,7 +48,7 @@
 	<body>
 		<div id="header"></div>
 
-		<a id="next" href="dlist/?q=2">next page?</a>
+		<a id="next" href="dlist/?industry={{industry}}&q=2">next page?</a>
 		<div id="nav">
 			<ul>
 				<li><a href="/zytj/alist" data-filter=".cat1">Ascending from Year Low</a></li>
