--- a/src/zytj/template/dlist.html
+++ b/src/zytj/template/dlist.html
@@ -15,10 +15,23 @@
 		<script type="text/javascript">
 		
 		$(document).ready(function(){
-		$(".chzn-select").chosen();
-		$(".chzn-select").chosen().change( function(e){ 
-			window.location = "http://127.0.0.1:8000/zytj/dlist?industry="+$(this).val(); 
-			} );
+			var industry = "{{industry}}"
+				var stockList = "{{stockList}}"
+					
+				$("#industry-select").val(industry)	
+				$("#industry-select").chosen();		
+				
+				$("#industry-select").chosen().change( function(e){ 
+					window.location = "http://127.0.0.1:8000/zytj/dlist?industry="+$(this).val()+"&list="+$("#list-select").val();
+				} );
+				
+				
+				$("#list-select").val(stockList)	
+				$("#list-select").chosen();		
+				
+				$("#list-select").chosen().change( function(e){ 
+					window.location = "http://127.0.0.1:8000/zytj/dlist?list="+$(this).val()+"&industry="+$("#industry-select").val();
+				} );
 			
 		$('[rel=tooltip]').tooltip({html:true});
 		$('.icon-arrow-down').tooltip({title:"Below MA50"});
@@ -55,18 +68,27 @@
 	<body>
 		<div id="header"></div>
 
-		<a id="next" href="dlist/?industry={{industry}}&q=2">next page?</a>
+		<a id="next" href="dlist/?industry={{industry}}&list={{stockList}}&q=2">next page?</a>
 		<div id="nav">
 			<ul>
 				<li><a href="/zytj/alist" data-filter=".cat1">Ascending from Year Low</a></li>
 				<li><a href="/zytj/dlist" data-filter=".cat2">Descending from Year High</a></li>
 			</ul>
 			<ul>
-				<select data-placeholder="Choose a Industry" class="chzn-select">
+				<select data-placeholder="Choose a Industry" id="industry-select">
 					<option value=""></option>
 					<option value="all">all</option>
 				{% for industry in industry_set%}
 			        <option value="{{industry}}">{{industry}}</option>			        
+			    {%endfor%}
+    			</select>    			
+			</ul>
+			
+			<ul>
+				<select data-placeholder="Choose a List" id="list-select">
+					<option value=""></option>					
+				{% for list in lists%}
+			        <option value="{{list}}">{{list}}</option>			        
 			    {%endfor%}
     			</select>    			
 			</ul>
