--- a/src/zytj/template/screen_year_low_high.html
+++ b/src/zytj/template/screen_year_low_high.html
@@ -17,12 +17,13 @@
 		$(document).ready(function(){
 		var industry = "{{industry}}"
 		var stockList = "{{stockList}}"
-			
+		var context = "{{context}}"
+					
 		$("#industry-select").val(industry)	
 		$("#industry-select").chosen();		
 		
 		$("#industry-select").chosen().change( function(e){ 
-			window.location = "http://127.0.0.1:8000/zytj/alist?industry="+$(this).val()+"&list="+$("#list-select").val();
+			window.location = "http://127.0.0.1:8000/zytj/"+context+"?industry="+$(this).val()+"&list="+$("#list-select").val();
 		} );
 		
 		
@@ -30,7 +31,7 @@
 		$("#list-select").chosen();		
 		
 		$("#list-select").chosen().change( function(e){ 
-			window.location = "http://127.0.0.1:8000/zytj/alist?list="+$(this).val()+"&industry="+$("#industry-select").val();
+			window.location = "http://127.0.0.1:8000/zytj/"+context+"?list="+$(this).val()+"&industry="+$("#industry-select").val();
 		} );
 		
 		//$('[rel=tooltip]').tooltip()
@@ -76,7 +77,7 @@
 	<body>
 		<div id="header"></div>
 
-		<a id="next" href="alist/?industry={{industry}}&list={{stockList}}&q=2" >next page?</a>
+		<a id="next" href="{{context}}/?industry={{industry}}&list={{stockList}}&q=2" >next page?</a>
 		<div id="nav">
 			<ul>
 				<li><a href="/zytj/alist" data-filter=".cat1">Ascending from Year Low</a></li>
@@ -109,7 +110,11 @@
 					<h2 class="box-title"><a href="/zytj/candle/{{stock.code}}" data-filter=".cat1" rel="tooltip" data-placement="right" title ="<html>High:{{stock.yearHigh}}<br>Low:{{stock.yearLow}}<br>MA50:{{stock.ma50}}<br>MA200:{{stock.ma200}}<br></html>">{{stock.code}}</a></h2>
 					<div class="box-text">
 						{{stock.current}}
+						{% if orderByAlist %}
 						+{{stock.PercentChangeFromYearLow}}% 
+						{% else%}
+						-{{stock.PercentChangeFromYearHigh}}%
+						{% endif %}
 						{% if stock.isInSh %}
 						<a href="http://finance.sina.com.cn/realstock/company/sh{{stock.code}}/nc.shtml">Sina</a>
 						{% else%}
