--- a/src/zytj/template/screen_year_low_high.html
+++ b/src/zytj/template/screen_year_low_high.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="../static/css/bootstrap.css">
 		<link rel="stylesheet" href="../static/js/chosen/chosen.css" />
 		<script type="text/javascript" src="../static/js/jquery-1.8.2.min.js"></script>
-		<script type="text/javascript" src="../static/bootstrap/js/bootstrap-tooltip.js"></script>		
+		<script type="text/javascript" src="../static/bootstrap/js/bootstrap.min.js"></script>		
 		<script type="text/javascript" src="../static/js/isotope.js"></script>
 		<script type="text/javascript" src="../static/js/jquery.infinitescroll.js"></script>
 		<script type="text/javascript" src="../static/js/chosen/chosen.jquery.min.js"></script>
@@ -58,7 +58,17 @@
 			event.stopPropagation();
 		});
 
-		
+		//autocomplete with twitter bootstrap's typeahead
+		$.ajax({
+			  url: 'quotes',
+			  dataType: 'json',
+			  success: function(data) {
+				 $('.typeahead').typeahead({
+						source: data
+					});
+			  }
+			});
+
 		var $container = $('#content');
 		$container.isotope({
 			filter: '*',
@@ -90,7 +100,6 @@
 	
 	<body>
 		<div id="header"></div>
-
 		<a id="next" href="{{context}}/?industry={{industry}}&list={{stockList}}&q=2" >next page?</a>
 		<div id="nav">
 			<ul>
@@ -116,9 +125,13 @@
 			    {%endfor%}
     			</select>    			
 			</ul>
+			<ul>
+				<input type="text" class="typeahead">				
+			</ul>
 		</div>
 		
-		<div id="content">			
+		<div id="content">	
+				
 			{% for stock in results%}
 			    <div class="box cat2 cat3" >
 					<h2 class="box-title"><a href="/zytj/candle/{{stock.code}}" data-filter=".cat1" rel="tooltip" data-placement="right" title ="<html>High:{{stock.yearHigh}}<br>Low:{{stock.yearLow}}<br>MA50:{{stock.ma50}}<br>MA200:{{stock.ma200}}<br></html>">{{stock.code}}</a></h2>
