--- a/src/zytj/template/index.html
+++ b/src/zytj/template/index.html
@@ -31,8 +31,8 @@
 <script class="code" language="javascript" type="text/javascript">
 $(document).ready(function(){ 
   // Note, the ohlc data is specified below 
-  //var a = "{{ohlc}}"
-  //alert(a)
+  var a = "{{ohlc}}"
+  alert(a)
   //alert(ohlc)  
   //ohlc is defined in python views
   var plot1 = $.jqplot('chart1',[ohlc],{
