--- a/src/zytj/template/alist.html
+++ b/src/zytj/template/alist.html
@@ -66,7 +66,11 @@
 	    function( newElements ) {
 	      $container.isotope( 'appended', $( newElements ) ); 
 	    }
-	  );		
+	  );
+		
+		$("a").click(function() {
+			  alert("Handler for .click() called.");
+		});
 
 });
 		</script>
@@ -110,7 +114,7 @@
 		<div id="content">		
 			{% for stock in results%}
 			    <div class="box cat2 cat3" >
-					<h2 class="box-title"><a href="/zytj/candle/{{stock.code}}" data-filter=".cat1" rel="tooltip" data-placement="right" title ="<html>High:{{stock.yearHigh}}<br>Low:{{stock.yearLow}}<br>MA50:{{stock.ma50}}<br>MA200:{{stock.ma200}}<br></html>">{{stock.code}}</a></h2>
+					<h2 class="box-title"><a id="{{stock.code}}" href="/zytj/candle/{{stock.code}}" data-filter=".cat1" rel="tooltip" data-placement="right" title ="<html>High:{{stock.yearHigh}}<br>Low:{{stock.yearLow}}<br>MA50:{{stock.ma50}}<br>MA200:{{stock.ma200}}<br></html>">{{stock.code}}</a></h2>
 					<div class="box-text">
 						{{stock.current}}
 						+{{stock.PercentChangeFromYearLow}}% 
