--- a/src/zytj/template/alist.html
+++ b/src/zytj/template/alist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Isotope Tutorial</title>
+		<title>AList Page</title>
 		
 		<link rel="stylesheet" href="../static/css/style.css">
 		<link rel="stylesheet" href="../static/css/bootstrap.css">
@@ -118,7 +118,7 @@
 					<h2 class="box-title"><a id="{{stock.code}}" href="/zytj/candle/{{stock.code}}" data-filter=".cat1" rel="tooltip" data-placement="right" title ="<html>High:{{stock.yearHigh}}<br>Low:{{stock.yearLow}}<br>MA50:{{stock.ma50}}<br>MA200:{{stock.ma200}}<br></html>">{{stock.code}}</a></h2>
 					<div class="box-text">
 						{{stock.name}}
-						+{{stock.PercentChangeFromYearLow}}% 
+						+{{stock.PercentChangeFromYearLow}}%
 						{% if stock.isInSh %}
 						<a href="http://finance.sina.com.cn/realstock/company/sh{{stock.code}}/nc.shtml">Sina</a>
 						{% else%}
