--- a/src/zytj/template/dlist.html
+++ b/src/zytj/template/dlist.html
@@ -99,6 +99,7 @@
 			    <div class="box cat2 cat3">
 					<h2 class="box-title"><a href="/zytj/candle/{{stock.code}}" data-filter=".cat1" rel="tooltip" data-placement="right" title ="<html>High:{{stock.yearHigh}}<br>Low:{{stock.yearLow}}<br>MA50:{{stock.ma50}}<br>MA200:{{stock.ma200}}<br></html>">{{stock.code}}</a></h2>
 					<div class="box-text">
+                        {{stock.name}}
 						{{stock.current}}
 						-{{stock.PercentChangeFromYearHigh}}%
 						{% if stock.isInSh %}
